fix(styling): header title should show ellipsis if too long

--- a/packages/common/src/styles/slick-grid.scss
+++ b/packages/common/src/styles/slick-grid.scss
@@ -207,6 +207,9 @@
 
   .slick-column-name {
     text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
   }
 
   .slick-resizable-handle {
